// 
// The first line is the date, the second
// line is the author of the entry, and all lines
// afterward make up the body of the entry.
// 
// Blank and commented (starting with "//") lines
// will not be displayed in-game. Entries with fewer
// than three lines will not be displayed in-game.

[*]Jan 2, 2016
Victor
- Added command [ResetSkill to set a skill back to 0.

[*]Jan 1, 2016
Victor
- [Look command now shows health status below the profile description.
- Now the [AddToParty command will auto-invite if there's only one result on the player list filter.
- Convoke command now sends a message instead of showing an empty gump, if no users were found to convoke.
- Added alias [Forums to the command [Forum.
- Reward Vendor is now invulnerable, so players won't be able to kill them anymore.
- Now Recall and Gate Travel spells can be used by criminal players.
- Now [Autodefend just need to be disabled once if you don't like it. Next time you login, it will continue disabled until you enable it again.
- Fixed message that was telling the skillcap was 700 when you try to train with an npc and you have already reached the skillcap and has no skill set to down.

[*]Jan 1, 2016
Adrian
- Improved Poker Game System.

[*]Dec 31, 2015
Victor
- Now player loses karma when he cuts a human corpse in pieces.
- Now when a player get back his corpse, if it's empty, it's deleted.
- Now players won't need to wait one hour to demolish a house right after placing it.

[*]Dec 30, 2015
Victor
- Added Mail System.
- Added Bomberman Game System.

[*]Dec 27, 2015
Victor
- Disabled house decay. Your house will be there forever.
- Pets/summons AI improved, so they will follow you precisely. Also they won't stay on the same tile anymore.
- Now blue players can perform beneficial actions on non-blues outside Felucca.
- Improved Interior Decorator and lowered its price. You can buy it from the architect.
- Disabled veteran rewards.

[*]Dec 23, 2015
Victor
- Skill cap set to 1200.
