@@ -21,6 +21,7 @@
 [*]Jan 2, 2016
 Victor
 - Added command [ResetSkill to set a skill back to 0.
+- Now players in the same party can see each other even when they are hidden.
 
 [*]Jan 1, 2016
 Victor
